ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metataData: 
  name: wishlist-app-ingress

spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-service
                port: 
                  number: 80
